fixed it so that the pictures are at the same width and height

--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
                       <div class="portfolio-hover">
                           <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                       </div>
-                      <img class="img-fluid" src="images/services-2.png" alt="" />
+                      <img class="img-one" src="images/databases.png"  width="300" height="300" >
                   </a>
                   <div class="portfolio-caption">
                       <div class="portfolio-caption-heading">Databases</div>
