--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
     <div class="row justify-content-center mb-5 pb-2">
       <div class="col-md-8 text-center heading-section ftco-animate">
        <span class="subheading">Our Services</span>
-       <h2 class="mb-4">We Offer Services</h2>
+       <h2 class="mb-4">What We Offer</h2>
      </div>
   
       <div class="row">
