--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Wilcon - Free Bootstrap 4 Template by Colorlib</title>
+	<title>XML3</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" href="img/favicon3.png">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
@@ -68,18 +69,19 @@
 				<div class="col-md-6 py-5 pl-md-5">
 					<div class="row justify-content-center mb-4 pt-md-4">
 						<div class="col-md-12 heading-section ftco-animate">
-							<span class="subheading">Welcome to Wilcon</span>
-							<h2 class="mb-4">Wilcon A Construction Company</h2>
+							<span class="subheading">Welcome to XML3</span>
+							<h2 class="mb-4">We can make creating a tech related project easy.</h2>
 							<div class="d-flex about">
 								<div class="icon"><span class="flaticon-hammer"></span></div>
-								<h3>We're in this business since 1975 and We provide the best insdustrial services</h3>
+								<h3>Making your technological dreams come through since 2020</h3>
 							</div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>Founded by 4 Computer Science Students from the small costal town of Corozal in the Country of Belize.These four men who's goal is to make a difference in this world through technology.
+</p>
 							<div class="d-flex video-image align-items-center mt-md-4">
 								<a href="#" class="video img d-flex align-items-center justify-content-center" style="background-image: url(images/about-2.jpg);">
 									<span class="fa fa-play-circle"></span>
 								</a>
-								<h4 class="ml-4">This is how we work on our clients, Watch video</h4>
+								<h4 class="ml-4">This is how we work on our clients projects, Watch video</h4>
 							</div>
 						</div>
 					</div>
@@ -95,8 +97,8 @@
 					<div class="img"  style="background-image: url(images/bg_2.jpg);">
 						<div class="overlay"></div>
 						<h2>Providing Personalized and High Quality Services</h2>
-						<p>We can manage your dream building A small river named Duden flows by their place</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary px-4 py-3">Request A Quote</a></p>
+						<p>We can manage your dream of building the perfect website for your buisness.</p>
+						<p class="mb-0"><a href="contact.html" class="btn btn-primary px-4 py-3">Contact Us</a></p>
 					</div>
 				</div>
 			</div>
@@ -109,10 +111,9 @@
 			<div class="row no-gutters">
 				<div class="col-md-6 py-5 bg-secondary aside-stretch">
 					<div class="heading-section heading-section-white p-4 pl-md-0 py-md-5 pr-md-5">
-						<span class="subheading">Wilcon A Construction Company</span>
-						<h2 class="mb-4">Best Provider for Industrial Services</h2>
-						<h4>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
+						<span class="subheading">XML3 A Website maker Company</span>
+						<h2 class="mb-4">Best Provider for your Computer Services</h2>
+						<h4>We are a small company made up of Computer Science students that want to make a change through our professional and quality web design.</h4>
 					</div>
 				</div>
 				<div class="col-md-6 d-flex align-items-center">
@@ -121,7 +122,7 @@
 							<div class="block-18 bg-primary d-flex align-items-center justify-content-between">
 								<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-engineer"></span></div>
 								<div class="text">
-									<strong class="number" data-number="48000">0</strong>
+									<strong class="number" data-number="0">0</strong>
 									<span>Project Completed</span>
 								</div>
 							</div>
@@ -130,7 +131,7 @@
 							<div class="block-18 d-flex align-items-center justify-content-between">
 								<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-worker-1"></span></div>
 								<div class="text">
-									<strong class="number" data-number="54900">0</strong>
+									<strong class="number" data-number="0">0</strong>
 									<span>Happy Customers</span>
 								</div>
 							</div>
@@ -140,6 +141,7 @@
 			</div>
 		</div>
 	</section>
+
 
 	<section class="ftco-section">
 		<div class="container">
@@ -435,82 +437,79 @@
 		</div>
 	</section>
 
+
 	<footer class="ftco-footer">
 		<div class="container mb-5 pb-4">
-			<div class="row">
-				<div class="col-lg col-md-6">
-					<div class="ftco-footer-widget">
-						<h2 class="ftco-heading-2 d-flex align-items-center">About</h2>
-						<p>Far far away, behind the word mountains, far from the countries.</p>
-						<ul class="ftco-footer-social list-unstyled mt-4">
-							<li><a href="#"><span class="fa fa-twitter"></span></a></li>
-							<li><a href="#"><span class="fa fa-facebook"></span></a></li>
-							<li><a href="#"><span class="fa fa-instagram"></span></a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-lg-4 col-md-6">
-					<div class="ftco-footer-widget">
-						<h2 class="ftco-heading-2">Links</h2>
-						<div class="d-flex">
-							<ul class="list-unstyled mr-md-4">
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Industries</a></li>
-							</ul>
-							<ul class="list-unstyled ml-md-5">
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Help</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Privacy Policy</a></li>
-								<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Terms of Use</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg col-md-6">
-					<div class="ftco-footer-widget">
-						<h2 class="ftco-heading-2">Services</h2>
-						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Customer Services</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Prompt Delivery</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Reliable Equipment</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>New Heavy Equipment</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-lg col-md-6">
-					<div class="ftco-footer-widget">
-						<h2 class="ftco-heading-2">Have a Questions?</h2>
-						<div class="block-23 mb-3">
-							<ul>
-								<li><span class="fa fa-map-marker mr-3"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="fa fa-phone mr-3"></span><span class="text">+2 392 3929 210</span></a></li>
-								<li><a href="#"><span class="fa fa-paper-plane mr-3"></span><span class="text">info@yourdomain.com</span></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
+		  <div class="row">
+			<div class="col-lg col-md-6">
+			  <div class="ftco-footer-widget">
+				<h2 class="ftco-heading-2 d-flex align-items-center">About</h2>
+				<p>We are a small company that is trying to make a name for itself in our country</p>
+				<ul class="ftco-footer-social list-unstyled mt-4">
+				  <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+				  <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+				  <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+				</ul>
+			  </div>
 			</div>
-		</div>
-		<div class="container-fluid bg-primary">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 aside-stretch py-3">
-						
-						<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-						</div>
-					</div>
-				</div>
+	  
+			<div class="col-lg-4 col-md-6">
+			  <div class="ftco-footer-widget">
+				<h2 class="ftco-heading-2">Links</h2>
+				<div class="d-flex">
+				 <ul class="list-unstyled mr-md-4">
+				   <li><a href="project.html"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
+				   <li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+				   <li><a href="services.html"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
+				 </ul>
+				 <ul class="list-unstyled ml-md-5">
+				   <li><a href="contact.html"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
+				   <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Help</a></li>
+				   <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Privacy Policy</a></li>
+				   <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Terms of Use</a></li>
+				 </ul>
+			   </div>
+			 </div>
+		   </div>
+	  
+		   <div class="col-lg col-md-6">
+			 <div class="ftco-footer-widget">
+			  <h2 class="ftco-heading-2">Services</h2>
+			  <ul class="list-unstyled">
+				<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Professional Web Design</a></li>
+				<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Database Management</a></li>
+				<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Video Editing</a></li>
+			  </ul>
 			</div>
-		</footer>
-
+		  </div>
+	  
+		  <div class="col-lg col-md-6">
+			<div class="ftco-footer-widget">
+			 <h2 class="ftco-heading-2">Have a Questions?</h2>
+			 <div class="block-23 mb-3">
+			   <ul>
+				 <li><span class="fa fa-map-marker mr-3"></span><span class="text">Comming soon</span></li>
+				 <li><a href="#"><span class="fa fa-phone mr-3"></span><span class="text">Comming soon</span></a></li>
+				 <li><a href="#"><span class="fa fa-paper-plane mr-3"></span><span class="text">Coming soon</span></a></li>
+			   </ul>
+			 </div>
+		   </div>
+		 </div>
+	   </div>
+	  </div>
+	  <div class="container-fluid bg-primary">
+	   <div class="container">
+		<div class="row">
+		 <div class="col-md-6 aside-stretch py-3">
+		  
+		   <p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | XML3 </a>
+			 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+		   </div>
+		 </div>
+	   </div>
+	  </div>
+	  </footer>
 		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered" role="document">
 				<div class="modal-content">
@@ -565,7 +564,6 @@
 				</div>
 			</div>
 		</div>
-		
 		
 
 		<!-- loader -->
