--- a/services.html
+++ b/services.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Wilcon - Free Bootstrap 4 Template by Colorlib</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>XML3</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" href="img/favicon3.png">
   
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
@@ -119,7 +120,7 @@
       <div class="col-lg col-md-6">
         <div class="ftco-footer-widget">
           <h2 class="ftco-heading-2 d-flex align-items-center">About</h2>
-          <p>Far far away, behind the word mountains, far from the countries.</p>
+          <p>We are a small company that is trying to make a name for itself in our country</p>
           <ul class="ftco-footer-social list-unstyled mt-4">
             <li><a href="#"><span class="fa fa-twitter"></span></a></li>
             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -133,14 +134,12 @@
           <h2 class="ftco-heading-2">Links</h2>
           <div class="d-flex">
            <ul class="list-unstyled mr-md-4">
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Industries</a></li>
+             <li><a href="project.html"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
+             <li><a href="about.html"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
+             <li><a href="services.html"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
            </ul>
            <ul class="list-unstyled ml-md-5">
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
+             <li><a href="contact.html"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Help</a></li>
              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Privacy Policy</a></li>
              <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Terms of Use</a></li>
@@ -153,10 +152,9 @@
        <div class="ftco-footer-widget">
         <h2 class="ftco-heading-2">Services</h2>
         <ul class="list-unstyled">
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Customer Services</a></li>
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Prompt Delivery</a></li>
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Reliable Equipment</a></li>
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>New Heavy Equipment</a></li>
+          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Professional Web Design</a></li>
+          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Database Management</a></li>
+          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Video Editing</a></li>
         </ul>
       </div>
     </div>
@@ -166,9 +164,9 @@
        <h2 class="ftco-heading-2">Have a Questions?</h2>
        <div class="block-23 mb-3">
          <ul>
-           <li><span class="fa fa-map-marker mr-3"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-           <li><a href="#"><span class="fa fa-phone mr-3"></span><span class="text">+2 392 3929 210</span></a></li>
-           <li><a href="#"><span class="fa fa-paper-plane mr-3"></span><span class="text">info@yourdomain.com</span></a></li>
+           <li><span class="fa fa-map-marker mr-3"></span><span class="text">Comming soon</span></li>
+           <li><a href="#"><span class="fa fa-phone mr-3"></span><span class="text">Comming soon</span></a></li>
+           <li><a href="#"><span class="fa fa-paper-plane mr-3"></span><span class="text">Coming soon</span></a></li>
          </ul>
        </div>
      </div>
@@ -181,7 +179,7 @@
    <div class="col-md-6 aside-stretch py-3">
     
      <p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-       Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+       Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | XML3 </a>
        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
      </div>
    </div>
