--- a/about.html
+++ b/about.html
@@ -155,22 +155,22 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="block-2 ftco-animate">
 						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-1.jpg);">
+							<div class="front" style="background-image: url(img/background.jpg);">
 								<div class="box">
-									<h2>Ryan Anderson</h2>
-									<p>Head Engineer</p>
+									<h2>Jorge Romero</h2>
+									<p>Founder/ Video Editor/ Web designer</p>
 								</div>
 							</div>
 							<div class="back">
 								<!-- back content -->
 								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+									<p>&ldquo;Dedicated and competent he has the quality of leading his team to the limit   &rdquo;</p>
 								</blockquote>
 								<div class="author d-flex">
 									<div class="image align-self-center">
-										<img src="images/team-1.jpg" alt="">
+										<img src="img/background.jpg" alt="">
 									</div>
-									<div class="name align-self-center ml-3">Ryan Anderson <span class="position">Head Engineer</span></div>
+									<div class="name align-self-center ml-3"> Jorge Romero	 <span class="position">Founder/ Video Editor/ Web designer</span></div>
 								</div>
 							</div>
 						</div>
@@ -179,22 +179,22 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="block-2 ftco-animate">
 						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-2.jpg);">
+							<div class="front" style="background-image: url(img/background.jpg);">
 								<div class="box">
-									<h2>Greg Washer</h2>
-									<p>Head Engineer</p>
+									<h2>Victor Tillett</h2>
+									<p>Co-Founder/ Video Editor/ Web designer </p>
 								</div>
 							</div>
 							<div class="back">
 								<!-- back content -->
 								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+									<p>&ldquo;With skill that are extrodinary and knowlege that is excelent  &rdquo;</p>
 								</blockquote>
 								<div class="author d-flex">
 									<div class="image align-self-center">
-										<img src="images/team-2.jpg" alt="">
+										<img src="img/background.jpg" alt="">
 									</div>
-									<div class="name align-self-center ml-3">Greg Washer<span class="position">Head Engineer</span></div>
+									<div class="name align-self-center ml-3">Victor Tillett<span class="position">Co Founder/ Video Editor/ Web designer</span></div>
 								</div>
 							</div>
 						</div>
@@ -203,22 +203,22 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="block-2 ftco-animate">
 						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-3.jpg);">
+							<div class="front" style="background-image: url(img/background.jpg);">
 								<div class="box">
-									<h2>Tony Henderson</h2>
-									<p>Ass. Engineer</p>
+									<h2>Daniel Garcia</h2>
+									<p>Web designer</p>
 								</div>
 							</div>
 							<div class="back">
 								<!-- back content -->
 								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+									<p>&ldquo; &rdquo;</p>
 								</blockquote>
 								<div class="author d-flex">
 									<div class="image align-self-center">
-										<img src="images/team-3.jpg" alt="">
+										<img src="img/background.jpg" alt="">
 									</div>
-									<div class="name align-self-center ml-3">Tony Henderson <span class="position">Ass. Engineer</span></div>
+									<div class="name align-self-center ml-3">Daniel Garcia <span class="position">Web designer</span></div>
 								</div>
 							</div>
 						</div>
@@ -227,215 +227,29 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="block-2 ftco-animate">
 						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-4.jpg);">
+							<div class="front" style="background-image: url(img/background.jpg);">
 								<div class="box">
-									<h2>Jack Smith</h2>
-									<p>Architect</p>
+									<h2>Franco Folgaright</h2>
+									<p>Web designer/ Database Management</p>
 								</div>
 							</div>
 							<div class="back">
 								<!-- back content -->
 								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+									<p>&ldquo;This is a example &rdquo;</p>
 								</blockquote>
 								<div class="author d-flex">
 									<div class="image align-self-center">
-										<img src="images/team-4.jpg" alt="">
+										<img src="img/background.jpg)" alt="">
 									</div>
-									<div class="name align-self-center ml-3">Jack Smith <span class="position">Architect</span></div>
+									<div class="name align-self-center ml-3">Franco Folgaright<span class="position">Web designer/ Database Management</span></div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+		</section>
 
-				<div class="col-lg-3 col-sm-6">
-					<div class="block-2 ftco-animate">
-						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-5.jpg);">
-								<div class="box">
-									<h2>Ryan Anderson</h2>
-									<p>President</p>
-								</div>
-							</div>
-							<div class="back">
-								<!-- back content -->
-								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
-								</blockquote>
-								<div class="author d-flex">
-									<div class="image align-self-center">
-										<img src="images/team-5.jpg" alt="">
-									</div>
-									<div class="name align-self-center ml-3">Ryan Anderson <span class="position">President</span></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="block-2 ftco-animate">
-						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-6.jpg);">
-								<div class="box">
-									<h2>Greg Washer</h2>
-									<p>Chief Executive Officer</p>
-								</div>
-							</div>
-							<div class="back">
-								<!-- back content -->
-								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
-								</blockquote>
-								<div class="author d-flex">
-									<div class="image align-self-center">
-										<img src="images/team-6.jpg" alt="">
-									</div>
-									<div class="name align-self-center ml-3">Greg Washer<span class="position">Chief Executive Officer</span></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="block-2 ftco-animate">
-						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-7.jpg);">
-								<div class="box">
-									<h2>Tony Henderson</h2>
-									<p>Contractor Operation Head</p>
-								</div>
-							</div>
-							<div class="back">
-								<!-- back content -->
-								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
-								</blockquote>
-								<div class="author d-flex">
-									<div class="image align-self-center">
-										<img src="images/team-7.jpg" alt="">
-									</div>
-									<div class="name align-self-center ml-3">Tony Henderson <span class="position">Contractor Operation Head</span></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6">
-					<div class="block-2 ftco-animate">
-						<div class="flipper">
-							<div class="front" style="background-image: url(/images/team-8.jpg);">
-								<div class="box">
-									<h2>Jack Smith</h2>
-									<p>Chief Financial Officer</p>
-								</div>
-							</div>
-							<div class="back">
-								<!-- back content -->
-								<blockquote>
-									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
-								</blockquote>
-								<div class="author d-flex">
-									<div class="image align-self-center">
-										<img src="images/team-8.jpg" alt="">
-									</div>
-									<div class="name align-self-center ml-3">Jack Smith <span class="position">Chief Financial Officer</span></div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section ftco-no-pt ftco-no-pb testimony-section img">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row ftco-animate justify-content-center">
-				<div class="col-md-6 p-4 pl-md-0 py-md-5 pr-md-5 aside-stretch d-flex align-items-center">
-					<div class="heading-section heading-section-white">
-						<span class="subheading" style="color:#fff;">Read Testimonials</span>
-						<h2 class="mb-4" style="font-size: 50px;">It's always a joy to hear that the work we do has positively reviews</h2>
-					</div>
-				</div>
-				<div class="col-md-6 pl-md-5 py-4 py-md-5 aside-stretch-right">
-					<div class="carousel-testimony owl-carousel ftco-owl">
-						<div class="item">
-							<div class="testimony-wrap py-4 pb-5 d-flex justify-content-between align-items-end">
-								<div class="user-img" style="background-image: url(images/person_1.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="fa fa-quote-left"></i>
-									</span>
-								</div>
-								<div class="text">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
-									<p class="name">Jeff Freshman</p>
-									<span class="position">Guests</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap py-4 pb-5 d-flex justify-content-between align-items-end">
-								<div class="user-img" style="background-image: url(images/person_2.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="fa fa-quote-left"></i>
-									</span>
-								</div>
-								<div class="text">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
-									<p class="name">Jeff Freshman</p>
-									<span class="position">Guests</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap py-4 pb-5 d-flex justify-content-between align-items-end">
-								<div class="user-img" style="background-image: url(images/person_3.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="fa fa-quote-left"></i>
-									</span>
-								</div>
-								<div class="text">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
-									<p class="name">Jeff Freshman</p>
-									<span class="position">Guests</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap py-4 pb-5 d-flex justify-content-between align-items-end">
-								<div class="user-img" style="background-image: url(images/person_1.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="fa fa-quote-left"></i>
-									</span>
-								</div>
-								<div class="text">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
-									<p class="name">Jeff Freshman</p>
-									<span class="position">Guests</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap py-4 pb-5 d-flex justify-content-between align-items-end">
-								<div class="user-img" style="background-image: url(images/person_3.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="fa fa-quote-left"></i>
-									</span>
-								</div>
-								<div class="text">
-									<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
-									<p class="name">Jeff Freshman</p>
-									<span class="position">Guests</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 
 	<footer class="ftco-footer">
