--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 	</div>
 	</nav>
 	<!-- END nav -->
-	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+	<section class="hero-wrap hero-wrap-2" style="background-image: url('img/background.jpg');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-start">
@@ -62,7 +62,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 d-flex align-items-stretch">
-					<div class="about-wrap img w-100" style="background-image: url(images/about.jpg);">
+					<div class="about-wrap img w-100" style="background-image: url(img/xml3logo2.jpg);">
 						<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-crane"></span></div>
 					</div>
 				</div>
@@ -78,7 +78,7 @@
 							<p>Founded by 4 Computer Science Students from the small costal town of Corozal in the Country of Belize.These four men who's goal is to make a difference in this world through technology.
 </p>
 							<div class="d-flex video-image align-items-center mt-md-4">
-								<a href="#" class="video img d-flex align-items-center justify-content-center" style="background-image: url(images/about-2.jpg);">
+								<a href="#" class="video img d-flex align-items-center justify-content-center" style="background-image: url(img/background.jpg);">
 									<span class="fa fa-play-circle"></span>
 								</a>
 								<h4 class="ml-4">This is how we work on our clients projects, Watch video</h4>
@@ -94,7 +94,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-12 text-center">
-					<div class="img"  style="background-image: url(images/bg_2.jpg);">
+					<div class="img"  style="background-image: url(img/background.jpg);">
 						<div class="overlay"></div>
 						<h2>Providing Personalized and High Quality Services</h2>
 						<p>We can manage your dream of building the perfect website for your buisness.</p>
@@ -106,7 +106,7 @@
 	</section>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter">
-		<div class="img image-overlay" style="background-image: url(images/about-3.jpg);"></div>
+		<div class="img image-overlay" style="background-image: url(img/NewLogo.png);"></div>
 		<div class="container">
 			<div class="row no-gutters">
 				<div class="col-md-6 py-5 bg-secondary aside-stretch">
@@ -155,7 +155,7 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="block-2 ftco-animate">
 						<div class="flipper">
-							<div class="front" style="background-image: url(img/background.jpg);">
+							<div class="front" style="background-image: url(img/jordi.png);">
 								<div class="box">
 									<h2>Jorge Romero</h2>
 									<p>Founder/ Video Editor/ Web designer</p>
@@ -168,7 +168,7 @@
 								</blockquote>
 								<div class="author d-flex">
 									<div class="image align-self-center">
-										<img src="img/background.jpg" alt="">
+										<img src="img/jordi.png" alt="">
 									</div>
 									<div class="name align-self-center ml-3"> Jorge Romero	 <span class="position">Founder/ Video Editor/ Web designer</span></div>
 								</div>
@@ -179,7 +179,7 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="block-2 ftco-animate">
 						<div class="flipper">
-							<div class="front" style="background-image: url(img/background.jpg);">
+							<div class="front" style="background-image: url(img/victor.jpg);">
 								<div class="box">
 									<h2>Victor Tillett</h2>
 									<p>Co-Founder/ Video Editor/ Web designer </p>
@@ -192,7 +192,7 @@
 								</blockquote>
 								<div class="author d-flex">
 									<div class="image align-self-center">
-										<img src="img/background.jpg" alt="">
+										<img src="img/victor.jpg" alt="">
 									</div>
 									<div class="name align-self-center ml-3">Victor Tillett<span class="position">Co Founder/ Video Editor/ Web designer</span></div>
 								</div>
@@ -243,6 +243,30 @@
 										<img src="img/background.jpg)" alt="">
 									</div>
 									<div class="name align-self-center ml-3">Franco Folgaright<span class="position">Web designer/ Database Management</span></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<div class="block-2 ftco-animate">
+						<div class="flipper">
+							<div class="front" style="background-image: url(img/background.jpg);">
+								<div class="box">
+									<h2>Nelson</h2>
+									<p>Web designer/ Database Management</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;This is a example &rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									<div class="image align-self-center">
+										<img src="img/background.jpg)" alt="">
+									</div>
+									<div class="name align-self-center ml-3">Nelson<span class="position">Web designer/ Database Management</span></div>
 								</div>
 							</div>
 						</div>
